fix: change header z-index

--- a/online-zoo/pages/main/main.css
+++ b/online-zoo/pages/main/main.css
@@ -14,7 +14,7 @@ header {
   position: relative;
   display: flex;
   justify-content: center;
-  z-index: 1;
+  z-index: 2;
   width: 100%;
   height: 94px;
   box-shadow: 0px 4px 8px rgba(44, 101, 77, 0.08);
